[package]
name = "php-injector"
version = "0.1.3"
edition = "2021"
authors = [ "Pedro Pires (onelikeandidie)" ]
license = "Apache-2.0"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/onelikeandidie/PHP-Injector"

[dependencies]
notify = "4.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3.2"
regex = "1"
lazy_static = "1.4.0"